<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuImage_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuImage_ChangeView"
        android:title="@string/changeview"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuImage_SortBy"
        android:icon="@drawable/loadingarrow"
        android:title="@string/sort_by" />

    <item
        android:id="@+id/menu_NDF"
        android:title="@string/newest_date_first" />

    <item
        android:id="@+id/menu_ODF"
        android:title="@string/old_date_first" />

    <item
        android:id="@+id/menu_SizeSL"
        android:title="@string/size_s_l" />

    <item
        android:id="@+id/menu_SizeLS"
        android:title="@string/size_l_s" />

    <item
        android:id="@+id/menuNameAZ"
        android:title="@string/name_a_z" />

    <item
        android:id="@+id/menuNameZA"
        android:title="@string/name_z_a" />


</menu>