<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_goneMarginTop="100dp">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp">

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/fileIcons"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/musicicon"
                        tools:src="@drawable/musicicons" />

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/iconMusicVideo"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="30dp"
                        android:visibility="gone" />
                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    tools:text="Music name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <com.mikepenz.iconics.view.IconicsImageView
                        android:id="@+id/favIconFav"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:src="@color/black" />


                    <TextView
                        android:id="@+id/tvFileModifierData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_15_may_2024" />

                    <TextView
                        android:id="@+id/tvFileSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_200_kb" />
                </LinearLayout>

            </LinearLayout>

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/btnFileDot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dots" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>